# Claude-Hardware-Enhancer

./: README.md
hardware-ai/: CLAUDE.md  README.md  pyproject.toml
hardware-ai/hardware_ai.egg-info/: PKG-INFO  requires.txt
hardware-ai/src/hardware_ai/: __init__.py
hardware-ai/src/hardware_ai/api/: client.py
hardware-ai/src/hardware_ai/cli/: __init__.py  commands.py
hardware-ai/src/hardware_ai/components/: arduino.py  esp32.py  motor_drivers.py  power_supplies.py  raspberry_pi_pico.py  resistors.py
hardware-ai/src/hardware_ai/core/: physics.py
hardware-ai/src/hardware_ai/plugins/: __init__.py
hardware-ai/src/hardware_ai/plugins/claude_code/: mcp_server.py
hardware-ai/tests/: test_physics.py  test_validator.py
hardware_ai.egg-info/: SOURCES.txt  entry_points.txt
src/hardware_ai/api/: __init__.py  models.py
src/hardware_ai/components/: __init__.py  motors.py  registry.py  sensors.py
src/hardware_ai/core/: __init__.py  circuit.py  simulator.py  validator.py
src/hardware_ai/plugins/claude_code/: __init__.py  skill.py
tests/: __init__.py  test_components.py  test_simulator.py
