[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hardware-ai"
version = "0.1.0"
description = "Hardware intelligence layer for AI coding assistants - GitHub Copilot for the physical world"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "HardwareAI Contributors"}
]
keywords = ["hardware", "embedded", "esp32", "arduino", "electronics", "firmware", "iot", "robotics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Hardware",
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[project.scripts]
hardware-ai = "hardware_ai.cli.commands:app"

[project.urls]
Homepage = "https://github.com/hardware-ai/hardware-ai"
Documentation = "https://hardware-ai.readthedocs.io"
Repository = "https://github.com/hardware-ai/hardware-ai"
Issues = "https://github.com/hardware-ai/hardware-ai/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["hardware_ai*"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]